--- a/gameoflife/index.html
+++ b/gameoflife/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div style="margin-bottom: 10px">
-        <button id="start">Start</button>
+        <button id="next">Next</button>
     </div>
     <canvas id="canvas" width="1000" height="1000"></canvas>
 </body>
